changed file name

--- a/M5_Starter_Code/athletic_sales_analysis_starter_code_final_version.ipynb
+++ b/M5_Starter_Code/athletic_sales_analysis_starter_code_final_version.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
        "4         4399           1407.68       Outlet  "
       ]
      },
-     "execution_count": 47,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +337,7 @@
        "4           5184.00       Online  "
       ]
      },
-     "execution_count": 48,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +377,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +410,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -570,7 +570,7 @@
        "4         4399           1407.68       Outlet  "
       ]
      },
-     "execution_count": 60,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -724,7 +724,7 @@
        "4         4399           1407.68       Outlet  "
       ]
      },
-     "execution_count": 61,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -738,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -977,7 +977,7 @@
        "[9643 rows x 12 columns]"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -990,7 +990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1011,7 +1011,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1024,7 +1024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1045,7 +1045,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1057,7 +1057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1078,7 +1078,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1089,7 +1089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1132,7 +1132,7 @@
        "      <th>0</th>\n",
        "      <td>Foot Locker</td>\n",
        "      <td>1185732</td>\n",
-       "      <td>2020-01-01</td>\n",
+       "      <td>1/1/20</td>\n",
        "      <td>Northeast</td>\n",
        "      <td>New York</td>\n",
        "      <td>New York</td>\n",
@@ -1147,7 +1147,7 @@
        "      <th>1</th>\n",
        "      <td>Foot Locker</td>\n",
        "      <td>1185732</td>\n",
-       "      <td>2020-01-01</td>\n",
+       "      <td>1/1/20</td>\n",
        "      <td>Northeast</td>\n",
        "      <td>Pennsylvania</td>\n",
        "      <td>Philadelphia</td>\n",
@@ -1162,7 +1162,7 @@
        "      <th>2</th>\n",
        "      <td>Foot Locker</td>\n",
        "      <td>1185732</td>\n",
-       "      <td>2020-01-01</td>\n",
+       "      <td>1/1/20</td>\n",
        "      <td>Northeast</td>\n",
        "      <td>Pennsylvania</td>\n",
        "      <td>Philadelphia</td>\n",
@@ -1177,7 +1177,7 @@
        "      <th>3</th>\n",
        "      <td>Foot Locker</td>\n",
        "      <td>1185732</td>\n",
-       "      <td>2020-01-01</td>\n",
+       "      <td>1/1/20</td>\n",
        "      <td>Northeast</td>\n",
        "      <td>New York</td>\n",
        "      <td>New York</td>\n",
@@ -1192,7 +1192,7 @@
        "      <th>4</th>\n",
        "      <td>Foot Locker</td>\n",
        "      <td>1185732</td>\n",
-       "      <td>2020-01-01</td>\n",
+       "      <td>1/1/20</td>\n",
        "      <td>Northeast</td>\n",
        "      <td>Pennsylvania</td>\n",
        "      <td>Philadelphia</td>\n",
@@ -1222,7 +1222,7 @@
        "      <th>9638</th>\n",
        "      <td>Foot Locker</td>\n",
        "      <td>1185732</td>\n",
-       "      <td>2021-12-31</td>\n",
+       "      <td>12/31/21</td>\n",
        "      <td>Northeast</td>\n",
        "      <td>Pennsylvania</td>\n",
        "      <td>Philadelphia</td>\n",
@@ -1237,7 +1237,7 @@
        "      <th>9639</th>\n",
        "      <td>Foot Locker</td>\n",
        "      <td>1185732</td>\n",
-       "      <td>2021-12-31</td>\n",
+       "      <td>12/31/21</td>\n",
        "      <td>Northeast</td>\n",
        "      <td>Pennsylvania</td>\n",
        "      <td>Philadelphia</td>\n",
@@ -1252,7 +1252,7 @@
        "      <th>9640</th>\n",
        "      <td>Amazon</td>\n",
        "      <td>1185732</td>\n",
-       "      <td>2021-12-31</td>\n",
+       "      <td>12/31/21</td>\n",
        "      <td>Northeast</td>\n",
        "      <td>Maine</td>\n",
        "      <td>Portland</td>\n",
@@ -1267,7 +1267,7 @@
        "      <th>9641</th>\n",
        "      <td>Amazon</td>\n",
        "      <td>1185732</td>\n",
-       "      <td>2021-12-31</td>\n",
+       "      <td>12/31/21</td>\n",
        "      <td>Northeast</td>\n",
        "      <td>Maine</td>\n",
        "      <td>Portland</td>\n",
@@ -1282,7 +1282,7 @@
        "      <th>9642</th>\n",
        "      <td>Foot Locker</td>\n",
        "      <td>1185732</td>\n",
-       "      <td>2021-12-31</td>\n",
+       "      <td>12/31/21</td>\n",
        "      <td>Northeast</td>\n",
        "      <td>Pennsylvania</td>\n",
        "      <td>Philadelphia</td>\n",
@@ -1300,17 +1300,17 @@
       ],
       "text/plain": [
        "         retailer  retailer_id invoice_date     region         state  \\\n",
-       "0     Foot Locker      1185732   2020-01-01  Northeast      New York   \n",
-       "1     Foot Locker      1185732   2020-01-01  Northeast  Pennsylvania   \n",
-       "2     Foot Locker      1185732   2020-01-01  Northeast  Pennsylvania   \n",
-       "3     Foot Locker      1185732   2020-01-01  Northeast      New York   \n",
-       "4     Foot Locker      1185732   2020-01-01  Northeast  Pennsylvania   \n",
+       "0     Foot Locker      1185732       1/1/20  Northeast      New York   \n",
+       "1     Foot Locker      1185732       1/1/20  Northeast  Pennsylvania   \n",
+       "2     Foot Locker      1185732       1/1/20  Northeast  Pennsylvania   \n",
+       "3     Foot Locker      1185732       1/1/20  Northeast      New York   \n",
+       "4     Foot Locker      1185732       1/1/20  Northeast  Pennsylvania   \n",
        "...           ...          ...          ...        ...           ...   \n",
-       "9638  Foot Locker      1185732   2021-12-31  Northeast  Pennsylvania   \n",
-       "9639  Foot Locker      1185732   2021-12-31  Northeast  Pennsylvania   \n",
-       "9640       Amazon      1185732   2021-12-31  Northeast         Maine   \n",
-       "9641       Amazon      1185732   2021-12-31  Northeast         Maine   \n",
-       "9642  Foot Locker      1185732   2021-12-31  Northeast  Pennsylvania   \n",
+       "9638  Foot Locker      1185732     12/31/21  Northeast  Pennsylvania   \n",
+       "9639  Foot Locker      1185732     12/31/21  Northeast  Pennsylvania   \n",
+       "9640       Amazon      1185732     12/31/21  Northeast         Maine   \n",
+       "9641       Amazon      1185732     12/31/21  Northeast         Maine   \n",
+       "9642  Foot Locker      1185732     12/31/21  Northeast  Pennsylvania   \n",
        "\n",
        "              city                product  price_per_unit  units_sold  \\\n",
        "0         New York  Men's Street Footwear              50        1200   \n",
@@ -1341,7 +1341,7 @@
        "[9643 rows x 12 columns]"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1352,7 +1352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1400,6 +1400,14 @@
       "\n",
       "[9643 rows x 12 columns]\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Owner\\AppData\\Local\\Temp\\ipykernel_18728\\4017428436.py:7: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "  combined_sales_df['invoice_date'] = pd.to_datetime(combined_sales_df['invoice_date'])\n"
+     ]
     }
    ],
    "source": [
@@ -1415,7 +1423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1459,7 +1467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1474,7 +1482,7 @@
        "Name: Total_Products_Sold, dtype: int64"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1505,7 +1513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1583,7 +1591,7 @@
        "Southeast Florida    Miami                        73135"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1617,7 +1625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1632,7 +1640,7 @@
        "Name: Total Sales, dtype: int64"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1659,7 +1667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1737,7 +1745,7 @@
        "          Florida        Orlando           27682851"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1775,7 +1783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1862,7 +1870,7 @@
        "Foot Locker Southeast South Carolina Charleston        24822280"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1891,7 +1899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1978,7 +1986,7 @@
        "Foot Locker Southeast South Carolina Charleston        24822280"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2005,7 +2013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -2257,7 +2265,7 @@
        "[1604 rows x 12 columns]"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2277,7 +2285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -2292,7 +2300,7 @@
        "Name: Womens_Footwear_Units_Sold, dtype: int64"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2320,7 +2328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -2407,7 +2415,7 @@
        "Sports Direct South     Texas          Dallas                               8790"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2434,7 +2442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -2533,7 +2541,7 @@
        "[355 rows x 1 columns]"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2551,7 +2559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -2642,7 +2650,7 @@
        "2021-08-10         839120"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2665,7 +2673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -2756,7 +2764,7 @@
        "2021-06-13        2358602"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
